# axum-shuttle-demo

./: Cargo.toml  README.md  Shuttle.toml
.github/workflows/: publish.yml
src/: dictionary.rs  lib.rs  main.rs  matrix_determinant.rs  random_image.rs
