[package]
name = "axum-shuttle-demo"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = { version = "0.5", features = ["json"] }
image = { version = "0.24.1", default-features = false, features = ["png"] }
noise = "0.7.0"
savage_core = "0.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
shuttle-service = { version = "0.2.6", features = [
    "web-axum",
    "sqlx-postgres",
] }
sync_wrapper = "0.1.1"
tokio = { version = "1.17.0", features = ["macros", "rt"] }
markdown = "0.3.0"
hyper = { version = "0.14.18", features = ["client", "http1", "runtime"] }
# Used make http*s* requests on top of hyper
hyper-tls = "0.5.0"
# For shuttle secrets
sqlx = { version = "0.5.13", features = ["postgres"] }

[lib]
# lib for debug binary (main), cdylib for shuttle deploy
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
